[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "requestvault"
version = "0.1.0b1"
description = "API observability and monitoring SDK for Python applications"
readme = "README.md"
requires-python = ">=3.10"

authors = [{ name = "Varun Vashisth", email = "varunvashisth2006@gmail.com" }]

license = { text = "Apache-2.0" }

keywords = [
    "observability",
    "monitoring",
    "api-monitoring",
    "analytics",
    "http",
    "requests",
    "sdk",
    "telemetry",
    "fastapi",
    "python"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring"
]

dependencies = [
    "requests>=2.31.0"
]

[project.urls]
Homepage = "https://github.com/VarunVashisth/requestvault"
Documentation = "https://requestvault.vercel.app/docs"
Repository = "https://github.com/VarunVashisth/requestvault-python"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["requestvault*"]